fixed depandcy versions matching plus auth routes for singup
